Fixed popup overflow bug

--- a/sass/bui/_bui_popup.sass
+++ b/sass/bui/_bui_popup.sass
@@ -62,11 +62,11 @@
             font-weight: 500
 
           .popup-content
-            overflow: hidden
-            overflow-y: auto
             padding: 0 20px
             color: $grey-600
             &.is-max-height
+              overflow: hidden
+              overflow-y: scroll
               border-top:    1px solid $grey-200
               border-bottom: 1px solid $grey-200
               padding: 20px
